--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -1,11 +1,46 @@
+.card {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 355px;
+  height: 340px;
+  padding: 20px;
+  gap: 15px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: #fff;
+}
+
+.card h3 {
+  text-align: start;
+}
+
+.description {
+  text-align: start;
+  width: 300pxpx;
+  height: 300px;
+
+}
+
+.cardInfos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 90px;
+}
+
 .favorite {
+  display: flex;
+  justify-content: flex-end;
   border: none;
   background-color: transparent;
+
 }
 
 .favorite img {
-    width: 15px;
-    height: 15px;
-    margin-right: 10px;
-    cursor: pointer;
+  margin-left: 290px;
+  cursor: pointer;
+  width: 15px;
+  height: 15px;
 }
