adding style to mobile

--- a/src/components/LatestNews/latestNews.module.css
+++ b/src/components/LatestNews/latestNews.module.css
@@ -31,3 +31,24 @@
   color: red;
   font-weight: 540;
 }
+
+@media screen and (max-width: 768px) {
+  .cardContainer {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .cardContainer img {
+    width: 100%;
+    height: 50%;
+  }
+
+  .cardContainer h2 {
+    font-size: 30px;
+  }
+
+  .cardContainer p {
+    font-size: 20px;
+  }
+}
+  
