--- a/src/pages/Favorites/favorites.module.css
+++ b/src/pages/Favorites/favorites.module.css
@@ -6,3 +6,10 @@
   flex-wrap: wrap;
   padding: 20px;
 }
+
+.messageFavorites {
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  width: 100%;
+}
