--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +8,7 @@
 
 body {
   background-color: #f1f2f3;
+  font-family: 'Poppins', sans-serif;
 }
 
 a {
@@ -13,7 +16,7 @@ a {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   color: black;
   font-weight: 550;
-  font-size: 15px;
+  font-size: 12px;
   text-decoration: none;
   text-align: center;
   background-color: #05d465;
