--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   width: 355px;
-  height: 340px;
+  height: 355px;
   padding: 20px;
   gap: 15px;
   border-radius: 10px;
@@ -12,23 +12,23 @@
   background-color: #fff;
 }
 
-
-
 .card h3 {
   text-align: start;
   font-size: 15px;
-  margin-bottom: 20px;
+  padding: 10px 0 0 10px;
 }
 
 .card p {
   font-size: 12px;
+  text-align: justify;
 }
 
 .description {
   text-align: start;
-  width: 300pxpx;
+  width: 300px;
   height: 300px;
-
+  font-size: 12px;
+  text-align: justify;
 }
 
 .cardInfos {
