--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ a {
   font-size: 12px;
   text-decoration: none;
   text-align: center;
-  background-color: #05d465;
+  background-color: #05d466ce;
   padding: 10px;
 }
 
