--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,11 +1,17 @@
 .headerContainer {
   align-items: center;
-  background-color: #272727;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  color: rgb(211, 211, 211);
+  background-image: linear-gradient(to right,#227011c0,#4dfc26cb);
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.365);
+  color: black;
   display: flex;
   font-size: calc(10px + 2vmin);
   justify-content: center;
   padding: 20px;
   width: 100%;
+}
+
+.headerContainer h1 {
+  font-weight: 630;
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.472);
+  letter-spacing: 3px;
 }
