--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,7 +1,7 @@
 .headerContainer {
   align-items: center;
   background-image: linear-gradient(to right,#227011c0,#4dfc26cb);
-  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.365);
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.365);
   color: black;
   display: flex;
   font-size: calc(10px + 2vmin);
@@ -14,4 +14,5 @@
   font-weight: 630;
   text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.472);
   letter-spacing: 3px;
+  color: #f1f2f3;
 }
