--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -11,36 +11,40 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 0 5px;
+  padding: 15px;
   height: 60px;
   width: 90%;
 }
 
 .nav button {
+  align-items: center;
+  display: flex;
+  justify-content: center;
   border: none;
   background-color: transparent;
   cursor: pointer;
   font-size: 17px;
-  padding: 10px;
-  border-radius: 5px;
+  text-align: center;
+  margin-right: 15px;
 }
 
 .nav button:hover {
-  background-color: #f1f2f3;
+  border-bottom: 2px solid #03ee70;
 }
 
 .nav .active {
-  background-color: #cacccec7;
+  border: none;
+  border-bottom: 3px solid #03ee70;
 }
 
 @media screen and (max-width: 768px) {
   .nav {
     justify-content: center;
+    padding: 15px 0;
   }
   
   .nav button {
-    font-size: 14px;
-    padding: 20px 10px;
+    font-size: 14.5px;
   }
 }
 
