--- a/src/index.css
+++ b/src/index.css
@@ -14,17 +14,18 @@ body {
 a {
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  color: black;
+  color: white;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   font-weight: 550;
   font-size: 12px;
   text-decoration: none;
   text-align: center;
-  background-color: #05d466ce;
+  background-color: #05a04d;
   padding: 10px;
 }
 
 a:hover {
-  background-color: #03ee70;
+  background-color: #01642f;
 }
 
 p {
