--- a/src/components/LatestNews/latestNews.module.css
+++ b/src/components/LatestNews/latestNews.module.css
@@ -36,6 +36,7 @@
   .cardContainer {
     flex-direction: column;
     gap: 20px;
+    padding: 10px;
     width: 100%;
   }
 
@@ -45,11 +46,15 @@
   }
 
   .cardContainer h2 {
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .cardContainer p {
-    font-size: 20px;
+    font-size: 15px;
   }
+
+  .cardLinkAndDate p {
+    font-size: 12px;
+  } 
 }
   
